--- a/apps/marvel-app/src/app/characters-list/characters-list.component.html
+++ b/apps/marvel-app/src/app/characters-list/characters-list.component.html
@@ -1,3 +1,8 @@
-<div *ngFor="let character of allCharacters | async">
-  <developer-character [character]="character"></developer-character>
+<div *ngFor="let character of characters | async">
+  <developer-character
+    [character]="{
+      character: character,
+      favorite: false
+    }"
+  ></developer-character>
 </div>
