--- a/apps/marvel-app/src/app/characters-list/characters-list.component.html
+++ b/apps/marvel-app/src/app/characters-list/characters-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let character of characters | async">
+<div *ngFor="let character of allCharacters | async">
   <developer-character
     [character]="{
       character: character,
